TC-2826	Packages List API - Add licenses array
